--- a/main.css
+++ b/main.css
@@ -32,6 +32,11 @@
     --deepyellow: #FFB615;
     --green: #00C27B;
     --teal: #00A4CB;
+    --gray05: #222;
+    --gray04: #666;
+    --gray03: #999;
+    --gray02: #DDD;
+    --gray01: #FAFAFA;
   }
 
 body{
@@ -39,8 +44,11 @@ body{
     justify-content: center;
     background-color: var(--black);
     flex-wrap:wrap;
+    overflow-x: hidden;
 }
 
+
+/* TYPE STYLING */
 h1 {
     font-size: 2rem;
     font-family: 'IBM Plex Mono', sans-serif;
@@ -55,34 +63,18 @@ h2 {
     color: var(--white);
 }
 
-#title {
-    font-size: 6rem;
-    font-family: 'terminal-grotesque', sans-serif;
-    color: var(--white);
-}
-
-#bigtext, #bigtext2{
-    font-size: 6rem;
-    font-family: 'terminal-grotesque-open', sans-serif;
-    color: var(--white);
-    grid-column: 2/11;
-    text-align: center;
-}
-#callout1, #callout2{
-    font-size: 1rem;
+h3{
+    font-size: 1.5rem;
     font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 400;
     color: var(--white);
-    grid-column: 2/11;
-    text-align: center;
 }
 
-#callout{
-    grid-column: 2/11;
-    border-right: #ffffff 1px;
-}
-
-.dropcap {
-    font-family: 'terminal-grotesque-open', sans-serif;
+h4{
+    font-size: 1rem;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 400;
+    color: var(--white);
 }
 
 p {
@@ -91,6 +83,18 @@ p {
     color: var(--white);
     line-height: 1.5rem;
 }
+
+#title {
+    font-size: 6rem;
+    font-family: 'terminal-grotesque', sans-serif;
+    color: var(--white);
+}
+
+.dropcap {
+    font-family: 'terminal-grotesque-open', sans-serif;
+}
+
+
 
 button{
     background-color:var(--black); /* Green */
@@ -111,12 +115,13 @@ button:hover{
     transition: all 0.2s ease-in-out;
 }
 
+/*  NAV STYLING */
 .nav{
     position:fixed;
     width: 100vw;
     max-width: 1400px;
     z-index: 999999;
-    /* background-color: var(--black); */
+    background-color: var(--black);
     margin: auto;
     display: inline-grid;
     grid-template-columns: repeat(12, 1fr [col-start]);
@@ -140,7 +145,7 @@ button:hover{
     display: flex;
     justify-content: space-between;
     font-family: 'IBM Plex Mono', sans-serif;
-    font-size: .8rem;
+    font-size: .7rem;
 }
 
 .nav__linkholder__link a{
@@ -148,6 +153,44 @@ button:hover{
     text-decoration: none;
 }
 
+/* SPACING */
+
+  .mbxs {
+    margin-bottom: .5rem !important;
+  }
+  
+  .mbs {
+    margin-bottom: 1.5rem !important;
+  }
+  
+  .mb {
+    margin-bottom: 5rem !important;
+  }
+  
+  .mbm {
+    margin-bottom: 8rem !important;
+  }
+  
+  .mbl {
+    margin-bottom: 16rem !important;
+  }
+  
+  .mbxl {
+    margin-bottom: 27rem !important;
+  }
+  
+  .phs {
+    margin: 0 1rem;
+  }
+  
+  .ph {
+    margin: 0 2rem;
+  }
+  
+  .phl {
+    margin: 0 5rem;
+  }
+  
 /*  CSS GRID SETUP */
 /* each zone of the site gets its own class, which is assigned a grid area that is detailed below */
 
@@ -162,55 +205,25 @@ button:hover{
     column-gap: 1vw;
 }
 
-
-/* .container--welcome{
-    grid-template-areas:
-        ". . . . . . . . . . . ."
-        ". welcome welcome welcome welcome welcome welcome welcome welcome welcome welcome ."
-        ". header header header header header header header header header header ."
-        ". intro intro intro intro intro intro intro . . . ."
-        ". join join . . . . . . . . ."
-    ;
-}
-
-.container--who{
-    grid-template-areas:
-        ". who who who who who who who who who who who"
-        ". bio bio bio bio bio bio bio . . . ."
-        ". link link link link link . . . . . ."
-        "img img img img img img img img img img img img"
-        ". . . . . . . . . . . ."
-    ;
-} */
-
-
 #title{
-    /* grid-area: header; */
-    grid-column: 2 / 11;
+    grid-column: 2 / 12;
     grid-row: 3;
-    /* background-color: yellow; */
 }
 
 #welcome{
-    /* grid-area: welcome; */
-    grid-column: 2 / 11;
+    grid-column: 2 / 12;
     grid-row: 2;
     height: 100%;
-    /* background-color: blue; */
 }
 
 #intro{
-    /* grid-area: intro; */
-    grid-column: 2 / 8;
+    grid-column: 2 / 9;
     grid-row: 4;
-    /* background-color: indianred; */
 }
 
 #join{
-    /* grid-area: join; */
     grid-column: 2 / 4;
     grid-row: 5;
-    /* background-color: lightblue; */
     font-family: 'IBM Plex Mono', sans-serif;
     font-size: 0.85rem;
     margin-top: 2rem;
@@ -219,7 +232,7 @@ button:hover{
 }
 
 #event-wrapper{
-    grid-column: 7 / 11;
+    grid-column: 8 / 12;
     grid-row: 6;
     margin-top: 10vw;
 }
@@ -232,14 +245,10 @@ button:hover{
 }
 
 #event-time{
-    /* grid-column: 6 / 11;
-    grid-row: 6; */
 
 }
 
 #event-date{
-    /* grid-column: 6 / 11;
-    grid-row: 6; */
     margin-top: 8px;
 }
 
@@ -250,36 +259,13 @@ button:hover{
 }
 
 #event-bio{
-    /* grid-column: 6 / 11;
-    grid-row: 6; */
     margin-top:12px;
 
 }
 
 #event-button{
-    /* grid-column: 6 / 11;
-    grid-row: 6; */
     margin-top: 16px;
     
-}
-
-#image-carousel{
-    /* grid-area: img; */
-    grid-column: 1 / 12;
-    grid-row: 3;
-    height: 40vw;
-    /* overflow: hidden;
-    white-space: nowrap; */
-    /* animation: bannermove 20s linear infinite; */
-}
-
-@keyframes bannermove {
-    0% {
-        transform: translate(0, 0);
-    }
-    100% {
-        transform: translate(-100%, 0)
-    }
 }
 
 #svgContainer{
@@ -302,6 +288,35 @@ button:hover{
     }
   }
 
+#matterCanvas{
+    position:fixed;
+    top:0;
+    z-index: 999;
+    pointer-events: none;
+    width:100vw;
+    height: 100vh;
+}
+
+#who{
+    grid-column: 2 / 12;
+}
+
+#who-bio{
+    /* grid-area: bio7 */
+    grid-row: 2;
+    grid-column: 2 / 6;   
+}
+
+#image-carousel{
+    /* grid-area: img; */
+    /* grid-column: 1 / 12; */
+    grid-row: 3;
+    /* margin: 0 auto; */
+    /* overflow: hidden;
+    white-space: nowrap; */
+    /* animation: bannermove 20s linear infinite; */
+}
+
 #img1{
     transform: rotate(-20deg); 
     object-fit: contain;
@@ -316,31 +331,137 @@ button:hover{
     max-height: 90%;
 }
 
-#who{
-    /* grid-area: who; */
-    grid-column: 2 / 12;
+#banner{
+    
 }
 
-#matterCanvas{
-    position:fixed;
-    top:0;
-    z-index: 999;
-    pointer-events: none;
-    width:100vw;
-    height: 100vh;
+@keyframes bannermove {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0)
+    }
 }
 
-#who-bio{
-    /* grid-area: bio7 */
-    grid-column: 2 / 6;   
+/* CALLOUT SECTION STYLING */
+
+#callout{
+    z-index:-10;
+    position:relative;
+    height: 150vh;
 }
+
+#callout, #grid-rows{
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 3vh;
+}
+
+#grid-col{
+    z-index:-20;
+    position: absolute;
+    width:100%;
+    height:100%;
+    top: 0;
+    left: 0;
+    display: inline-grid;
+    pointer-events:none;
+    grid-template-columns: repeat(12, 1fr [col-start]);
+    grid-template-rows: none;
+    column-gap: 1vw;
+}
+#grid-rows{
+    z-index:-22;
+    position: absolute;
+    width:100%;
+    height:100%;
+    top: 0;
+    left: 0;
+    display: inline-grid;
+    pointer-events:none;
+    grid-template-columns: none;
+}
+
+.col-segment,.row-segment {
+    border: 1px solid var(--gray05);
+    height: 100%;
+    z-index: 0;
+}
+
+/* text styling */
+#bigtext, #bigtext2{
+    font-size: 6rem;
+    font-family: 'terminal-grotesque-open', sans-serif;
+    color: var(--white);
+    grid-column: 1/13;
+    text-align: center;
+    align-self: end;
+    line-height: 6rem;
+}
+
+#callout1, #callout2{
+    font-size: 1.5rem;
+    font-family: 'IBM Plex Mono', sans-serif;
+    color: var(--white);
+    grid-column: 1/13;
+    text-align: center;
+    align-self: end;
+    line-height: 150%;
+}
+
+/* placing text in grid */
+#callout1{
+    grid-row: 6/7;
+}
+#bigtext{
+    grid-row: 7/8;
+}
+#callout2{
+    grid-row: 8/9;
+}
+#bigtext2{
+    grid-row: 9/10;
+}
+
+/* positioning sticker canvas */
+#stickerCanvas{
+    z-index:-500;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* border: 1px solid var(--gray05); */
+}
+
+
 
 #mentor{
-    grid-column: 2/11;
+    grid-column: 2/12;
 }
 #mentor-desc{
-    grid-column: 2/6;
+    grid-column: 2/7;
 }
 #mentor-desc2{
-    grid-column: 7/11;
+    grid-column: 7/12;
+}
+
+
+.footer-logo{
+    font-family: 'terminal-grotesque-open', sans-serif ;
+    font-size: 4rem;
+    color: var(--white);
+}
+.list-title{
+    font-size: .7rem;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 400;
+    color: var(--gray03);
+}
+.footer-linkholder a{
+    font-size: .7rem;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 400;
+    color: var(--white);
+    text-decoration: none;
 }
