--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@
     --deepyellow: #FFB615;
     --green: #00C27B;
     --teal: #00A4CB;
-    --gray05: #222;
+    --gray05: #333;
     --gray04: #666;
     --gray03: #999;
     --gray02: #DDD;
@@ -84,6 +84,13 @@ p {
     line-height: 1.5rem;
 }
 
+a{
+    font-size: 1rem;
+    font-family: 'IBM Plex Mono', sans-serif;
+    color: var(--white);
+    line-height: 1.5rem;
+}
+
 #title {
     font-size: 6rem;
     font-family: 'terminal-grotesque', sans-serif;
@@ -94,7 +101,16 @@ p {
     font-family: 'terminal-grotesque-open', sans-serif;
 }
 
-
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 button{
     background-color:var(--black); /* Green */
@@ -289,10 +305,11 @@ button:hover{
   }
 
 #matterCanvas{
-    position:fixed;
+    position:absolute;
     top:0;
-    z-index: 999;
-    pointer-events: none;
+    left: calc(50% - 50vw);
+    z-index: 99;
+    /* pointer-events: none; */
     width:100vw;
     height: 100vh;
 }
@@ -383,7 +400,8 @@ button:hover{
 }
 
 .col-segment,.row-segment {
-    border: 1px solid var(--gray05);
+    border: 1px solid var(--white);
+    opacity: .07;
     height: 100%;
     z-index: 0;
 }
@@ -425,7 +443,7 @@ button:hover{
 
 /* positioning sticker canvas */
 #stickerCanvas{
-    z-index:-500;
+    z-index:10;
     position: absolute;
     top: 0;
     left: 0;
@@ -435,7 +453,11 @@ button:hover{
 }
 
 
-
+#mentor-img{
+    grid-column: 1/12;
+    max-width:100%; 
+    max-height:100%;
+}
 #mentor{
     grid-column: 2/12;
 }
@@ -446,22 +468,102 @@ button:hover{
     grid-column: 7/12;
 }
 
+/* Community Highlight */
+
+#community{
+    grid-column: 2/6;
+    grid-row: 1;
+}
+
+#community-image{
+    grid-column: 2/9;
+    max-width:100%; 
+    max-height:100%;
+}
+
+#community-desc{
+    grid-column: 9/10;
+    display: table;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+}
+#community-desc span{
+    vertical-align: middle;
+    display: table-cell;
+}
+
+/* Footer Styling */
 
 .footer-logo{
     font-family: 'terminal-grotesque-open', sans-serif ;
-    font-size: 4rem;
+    font-size: 5rem;
     color: var(--white);
+    grid-column: 2/5;
+    
 }
+.logo-label{
+    font-size: .8rem;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 400;
+    color: var(--white);
+    grid-column: 2/5;
+    
+    padding-bottom: 2rem;
+}
+
 .list-title{
-    font-size: .7rem;
+    font-size: .8rem;
     font-family: 'IBM Plex Mono', sans-serif;
     font-weight: 400;
     color: var(--gray03);
 }
 .footer-linkholder a{
-    font-size: .7rem;
+    font-size: .8rem;
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 400;
     color: var(--white);
     text-decoration: none;
 }
+
+.sign-up, .deets{
+    color: var(--white);
+    font-family: 'IBM Plex Sans', sans-serif;
+    grid-column: 2/6 ;
+    
+}
+
+.sign-up{
+    font-size: 1rem;
+    grid-row: 3;
+    padding-bottom: .5rem;
+    
+}
+.deets{
+    font-size: .8rem;
+    grid-row: 4;
+}
+
+.list-title{
+    grid-row: 3;
+}
+#involved-title{
+    grid-column: 8/10;
+}
+
+.involved-links{
+    grid-column: 8/10;
+    grid-row: 4;
+}
+#about-title{
+    grid-column: 10/12; 
+}
+
+.about-links{
+    grid-column: 10/12;
+    grid-row: 4;
+}
+
+
+
+  
