--- a/main.css
+++ b/main.css
@@ -145,6 +145,7 @@ button:hover {
     font-size: 1.5rem;
     justify-self: start;
     color: var(--white);
+    text-decoration:none;
 }
 
 .nav__linkholder {
@@ -158,6 +159,28 @@ button:hover {
 .nav__linkholder__link a {
     color: var(--white);
     text-decoration: none;
+}
+
+.nav__link{
+    position:relative;
+}
+
+.nav__link:before{
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    visibility: hidden;
+    transition: all 0.15s cubic-bezier(0,.86,.57,1.31);
+}
+
+
+.nav__link:hover:before{
+    visibility: visible;
+     width: 100%;
 }
 
 /* TURN OFF SELECTION */
@@ -224,6 +247,10 @@ button:hover {
     column-gap: 1vw;
 }
 
+#landing-page {
+    margin-top: 10vw;
+}
+
 #drawing-canvas {
     grid-column: 1 / 13;
     height: 75vw;
@@ -237,6 +264,7 @@ button:hover {
 #title {
     grid-column: 2 / 12;
     grid-row: 3;
+    font-size: 6vw;
 }
 
 #welcome {
@@ -246,7 +274,7 @@ button:hover {
 }
 
 #intro {
-    grid-column: 2 / 9;
+    grid-column: 2 / 7;
     grid-row: 4;
 }
 
@@ -263,7 +291,7 @@ button:hover {
 #event-wrapper {
     grid-column: 8 / 12;
     grid-row: 6;
-    margin-top: 5vw;
+    margin-top: 10vw;
 }
 
 
@@ -399,30 +427,57 @@ button:hover {
     /* animation: bannermove 20s linear infinite; */
 }
 
-#img1 {
-    transform: rotate(-20deg);
-    object-fit: contain;
-    max-width: 75%;
-    max-height: 75%;
+#slider-container {
+    height: 40vh;
+    width: 100vw;
+    margin: 0 auto;
+    position: relative;
+    
+}
+.slider {
+    position: absolute;
+    display: flex;
+    flex-flow: row nowrap;
+    margin-top: 4vh;
+}
+.slider-instant {
+    transition: none;
+}
+.slider-animate {
+    margin-left: 0;
+}
+.slider-extra {
+    display: flex;
+    flex-flow: row nowrap;
+}
+.slider-last {
+    min-width: 100vw;
+    max-width: 100vw;
+    /* overflow: hidden; */
+}
+.slider span {
+    margin-right: 5vw;
+}
+.slider .slider-extra {
+    margin-right: 0;
+}
+.slider img {
+    height: inherit;
+    vertical-align: inherit;
+    border: inherit;
+    width: auto;
+    height: auto;
+    max-width: 400px; 
+    max-height: 40vh;
+    transition: all 0.45s ease;
 }
 
-#img2 {
-    transform: rotate(5deg);
-    object-fit: contain;
-    max-width: 90%;
-    max-height: 90%;
-}
-
-#banner {}
-
-@keyframes bannermove {
-    0% {
-        transform: translate(0, 0);
-    }
-
-    100% {
-        transform: translate(-100%, 0)
-    }
+.slider img:hover {
+    transform: rotate(10deg) scale(1.1);
+    -moz-transform: rotate(10deg) scale(1.1);
+    -webkit-transform: rotate(10deg) scale(1.1);
+    
+    transform-origin: center;
 }
 
 /* CALLOUT SECTION STYLING */
@@ -430,13 +485,14 @@ button:hover {
 #callout {
     /* z-index: -10; */
     position: relative;
-    /* height: 150vh; */
     /* pointer-events: none; */
+    background-image: linear-gradient(rgba(10,10,10,1), rgba(10,10,10,0), rgba(10,10,10,0), rgba(10,10,10,0), rgba(10,10,10,1));
+    
 }
 
 #callout,
 #grid-rows {
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     row-gap: 3vh;
 }
 
@@ -444,7 +500,7 @@ button:hover {
     z-index: -20;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 99%;
     top: 0;
     left: 0;
     display: inline-grid;
@@ -458,7 +514,7 @@ button:hover {
     z-index: -22;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 99%;
     top: 0;
     left: 0;
     display: inline-grid;
@@ -499,19 +555,19 @@ button:hover {
 
 /* placing text in grid */
 #callout1 {
-    grid-row: 6/7;
+    grid-row: 4/5;
 }
 
 #bigtext {
-    grid-row: 7/8;
+    grid-row: 5/6;
 }
 
 #callout2 {
-    grid-row: 8/9;
+    grid-row: 6/7;
 }
 
 #bigtext2 {
-    grid-row: 9/10;
+    grid-row: 7/8;
 }
 
 /* positioning sticker canvas */
