--- a/css/article.css
+++ b/css/article.css
@@ -52,3 +52,29 @@ img{
     height: 100%;
 }
 
+.banner-wrapper{
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 100vh;
+    height: 95vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+}
+
+.banner{
+    background-position: center;
+    background-size: contain;
+    display: flex;
+    position: relative;
+    z-index: -1;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    transform: translateZ(-1px) scale(2);
+}
+
+#rebrand{
+    background-image: url(/img/rebrand-header.png);
+    background-position: 50% 50%;
+}
