--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,17 @@ body {
     overflow-x: hidden;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 /* ------------ TYPE DEFINITIONS ------------ */
 
 h1 {
@@ -166,7 +177,7 @@ button:hover {
 /* ------------ BASE GRID DEFINITIONS ------------ */
 
 .container {
-    width: 100vw;
+    width: 100%;
     max-width: 1400px;
     display: grid;
     column-gap: 5vw;
@@ -960,18 +971,22 @@ button:hover {
     grid-column: start / half;
     grid-row: 1;
     width: 35vw;
-    height: 35vw;
+    height: 100%;
     min-height: 5vw;
     background-image: url(/media/case-study.png);
-    background-size: cover;
-    transition: all cubic-bezier(1, 0, 0, 1);
+    background-size: 100%;
+    background-position: center;
+    -webkit-transition: background-size 150ms ease;
+	-moz-transition: background-size 150 ease;
+	-o-transition: background-size 150 ease
+	transition: background-size 150ms ease;
     display: inline-grid;
     justify-self: center;
 }
 
 #community-image:hover {
     opacity: 50%;
-    outline: var(--white);
+    background-size: 120%;
 }
 
 #community-title {
@@ -1019,7 +1034,6 @@ button:hover {
     grid-column: start / end;
     display: flex;
     justify-content: space-between;
-    margin-top: 10vw;
 }
 
 .merch-card {
@@ -1034,6 +1048,10 @@ button:hover {
     grid-column: quarter/threeQ;
     margin-top: 16px;
     grid-row: 6;
+}
+
+#merch-button button{
+    width: 100%;
 }
 
 .merch-card h1 {
